# libnifalcon

./: Build.bash  CMakeLists.txt  package.xml
cmake_modules/: Findlog4cxx.cmake
examples/: CMakeLists.txt
examples/barrow_mechanics/: main.cpp
examples/falcon_test_cli/: FalconSphereTest.cpp
examples/findfalcons/: findfalcons  findfalcons.cpp
examples/my_controller/: controller.cpp  controller.h  main.cpp
include/falcon/core/: FalconDevice.h  FalconLogger.h
src/util/: FalconCLIBase.cpp
